--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,9 @@ comments:
   gitalk: true
   gitalk_clientID: '8e4bd963759ccf13f7eb'
   gitalk_Secret: 'c2dcf2102c53e9ec0cdad6baba04a1a2c79d2306'
-  gitalk_repo: 'RLNM.github.io'
-  gitalk_owner: 'RLNM'
-  gitalk_admin: 'RLNM'
+  gitalk_repo: 'rlnm.github.io'
+  gitalk_owner: 'rlnm'
+  gitalk_admin: 'rlnm'
   distractionFreeMode: true
 
 # MathJax 公式支持 by Ray-Eldath
